--- a/analysis.qmd
+++ b/analysis.qmd
@@ -245,42 +245,7 @@ All remaining counties, often labeled “noncore” counties because they are no
 :::
 
 ```{r mdcr_enroll_ab_2}
-mdcr_enroll_ab_2 |> 
-  dplyr::select(year,
-                residence = area_of_residence,
-                population,
-                total,
-                original,
-                ma_other,
-                metro,
-                micro,
-                non_cbsa) |> 
-  gt::gt(rowname_col = "year") |> 
-  gt::sub_missing() |> 
-  gt::fmt_number(columns = 3:9,
-                 suffixing = TRUE,
-                 decimals = 2) |>
-  gt::opt_stylize(style = 1)
-```
-
-<br>
-
-
-```{r}
-mdcr_enroll_ab_2 |> 
-  dplyr::select(year,
-                residence = area_of_residence,
-                Total = total_pct,
-                Original = original_pct,
-                Advantage = ma_other_pct,
-                Metropolitan = metro_pct,
-                Micropolitan = micro_pct,
-                "Non-CBSA" = non_cbsa_pct) |> 
-  gt::gt(rowname_col = "year",
-         groupname_col = "residence") |> 
-  gt::sub_missing() |> 
-  gt::fmt_percent(columns = 3:8) |> 
-  gt::opt_stylize(style = 1)
+mdcr_enroll_ab_2
 ```
 
 <br>
@@ -303,10 +268,10 @@ mdcr_enroll_ab_2 |>
   gt::cols_align(align = "right", 
                  columns = residence) |> 
   gt::cols_align_decimal() |> 
-  gt::opt_table_font(
-    font = c(
-      gt::google_font(name = "Karla"),
-      gt::default_fonts())) |>
+  # gt::opt_table_font(
+  #   font = c(
+  #     gt::google_font(name = "Karla"),
+  #     gt::default_fonts())) |>
   gt::sub_missing() |>
   gt::fmt_percent(columns = 2:10,
                   decimals = 1,
@@ -362,10 +327,7 @@ mdcr_enroll_ab_2 |>
   gt::opt_stylize(style = 1, add_row_striping = FALSE)
 ```
 
-<br>
-
 ```{r}
-#| column: page
 mdcr_enroll_ab_2 |> 
   dplyr::select(year,
                 residence = area_of_residence,
@@ -378,23 +340,29 @@ mdcr_enroll_ab_2 |>
                      values_from = "Percentage") |>
   gt::gt(rowname_col = "Type", 
          groupname_col = "residence") |> 
+  gt::opt_stylize(style = 1, 
+                  add_row_striping = FALSE) |>
   gt::tab_header(
     title = gt::md("**Medicare Enrollment by Area of Residence**"),
     subtitle = gt::md("**Percentage of Medicare Beneficiaries Enrolled in *Original Medicare* or *Medicare Advantage*, 2013 - 2021**")
   ) |> 
-  gt::tab_options(
-    row_group.background.color = "#FFEFDB",
+   gt::tab_options(
+     column_labels.vlines.color = "blue",
+    column_labels.font.weight = "bold",
+    stub.font.weight = "bold",
+    stub.font.size = gt::pct(80),
+    row_group.font.weight = "bold",
+    row_group.font.size = gt::pct(70),
     row_group.as_column = TRUE) |>
-  gt::tab_stub_indent(
-    rows = dplyr::everything(),
-    indent = 2) |> 
   gt::cols_align(align = "right", 
                  columns = c("residence", "Type")) |> 
+  gt::cols_align(align = "center", 
+                 columns = 3:11) |> 
   gt::cols_align_decimal() |> 
-  gt::opt_table_font(
-    font = c(
-      gt::google_font(name = "Karla"),
-      gt::default_fonts())) |>
+  # gt::opt_table_font(
+  #   font = c(
+  #     gt::google_font(name = "Karla"),
+  #     gt::default_fonts())) |>
   gt::sub_missing() |>
   gt::fmt_percent(columns = 3:11,
                   decimals = 1,
@@ -403,9 +371,10 @@ mdcr_enroll_ab_2 |>
   gt::data_color(direction = "row",
                  method = "numeric",
                  palette = "Blues") |>
-  gt::opt_vertical_padding(scale = 1.65) |>
-  gt::opt_stylize(style = 1, 
-                  add_row_striping = FALSE) |>
+  # gt::tab_style(
+  #   style = gt::cell_fill(color = "lightblue"),
+  #   locations = gt::cells_row_groups()) |> 
+  gt::opt_vertical_padding(scale = 0.65) |>
   gt::tab_source_note(
     source_note = gt::md(
     "**Source**: [CMS Program Statistics - Medicare Total Enrollment](https://data.cms.gov/summary-statistics-on-beneficiary-enrollment/medicare-and-medicaid-reports/cms-program-statistics-medicare-total-enrollment)."))
@@ -413,76 +382,53 @@ mdcr_enroll_ab_2 |>
 
 <br>
 
+
+
 ```{r}
 mdcr_enroll_ab_2 |> 
   dplyr::select(year,
                 residence = area_of_residence,
-                METRO = metro_pct,
-                MICRO = micro_pct,
-                "NON-CBSA" = non_cbsa_pct) |> 
-  gt::gt(rowname_col = "year",
+                Metro = metro_pct,
+                Micro = micro_pct,
+                'Non-CBSA' = non_cbsa_pct
+                # Metropolitan = metro_pct,
+                # Micropolitan = micro_pct,
+                # "Non-CBSA" = non_cbsa_pct
+                ) |> 
+  tidyr::pivot_longer(cols = c("Metro", "Micro", "Non-CBSA"), 
+                      names_to = "Type", 
+                      values_to = "Percentage") |> 
+  tidyr::pivot_wider(names_from = "year",
+                     values_from = "Percentage") |>
+  gt::gt(rowname_col = "Type", 
          groupname_col = "residence") |> 
-  gt::sub_missing() |> 
-  gt::fmt_percent(columns = 3:5) |> 
-  gt::opt_stylize(style = 1)
-```
-
-<br>
-
-```{r}
-#| echo: false
-#| eval: false
-mdcr_enroll_ab_2 |> 
-  dplyr::select(year, 
-                area_of_residence, 
-                total_pct) |> 
-  tidyr::pivot_wider(names_from = "year", 
-                     values_from = "total_pct") |> 
-  gt::gt(rowname_col = "area_of_residence") |> 
-  gt::cols_align(align = "right", 
-                 columns = area_of_residence) |> 
+  gt::opt_stylize(style = 1, color = "red") |> 
+  gt::tab_options(
+    column_labels.font.weight = "bold",
+    stub.font.weight = "bold",
+    stub.font.size = gt::pct(80),
+    row_group.font.weight = "bold",
+    row_group.font.size = gt::pct(70),
+    row_group.as_column = TRUE) |>
+  gt::data_color(direction = "row",
+                 method = "numeric",
+                 palette = "ggsci::red_material") |>
   gt::cols_align_decimal() |> 
-  gt::opt_table_font(
-    font = c(
-      gt::google_font(name = "Karla"),
-      gt::default_fonts())) |>
-  # gt::tab_style(
-  #   style = gt::cell_text(
-  #     font = c(
-  #       gt::google_font(name = "IBM Plex Mono"),
-  #       gt::default_fonts())),
-  #   locations = gt::cells_body(columns = 2:10)) |> 
-  # gt::tab_style(style = gt::cell_text(weight = "bold"),
-  #               locations = gt::cells_stub()) |>
-  # gt::fmt_percent(rows = 1,
-  #                 decimals = 1,
-  #                 drop_trailing_zeros = TRUE,
-  #                 drop_trailing_dec_mark = TRUE) |> 
-  # gt::fmt_number(rows = 2:52,
-  #                decimals = 1,
-  #                scale_by = 100,
-  #                drop_trailing_zeros = TRUE) |> 
-  # gt::data_color(direction = "row",
-  #                method = "numeric",
-  #                palette = "PuOr",
-  #                #alpha = 0.4,
-  #                reverse = TRUE
-  #                ) |> 
-  # gt::opt_vertical_padding(scale = 0.65) |>
-  # gt::opt_horizontal_padding(scale = 1.3) |>
-  # gt::tab_options(
-  #   table_body.hlines.style = "none",
-  #   column_labels.border.top.color = "black",
-  #   column_labels.border.bottom.color = "black",
-  #   table_body.border.bottom.color = "black")
+  gt::sub_zero(zero_text = "< 0%") |>
+  gt::fmt_percent(columns = 3:11,
+                  decimals = 1,
+                  drop_trailing_zeros = TRUE,
+                  drop_trailing_dec_mark = TRUE)
 ```
+
+
 
 <br>
 
 
 Part A and/or Part B Total, Aged, and Disabled Enrollees, 2008-2021
 
-::: {.callout-note appearance="simple"}
+::: {.callout-note appearance="simple" collapse="true"}
 
 ## Medicare Part A
 
@@ -491,7 +437,7 @@ An insurance program providing basic protection against the costs of hospital an
 :::
 
 
-::: {.callout-note appearance="simple"}
+::: {.callout-note appearance="simple" collapse="true"}
 
 ## Medicare Part B
 
@@ -508,20 +454,64 @@ mdcr_enroll_ab_3
 Part A and/or Part B Enrollees by Age Group, 2008-2021
 
 ```{r mdcr_enroll_ab_4}
-mdcr_enroll_ab_4 |> 
-  dplyr::select(year, 
-                dplyr::contains("tot_"))
-```
+age_tot <- mdcr_enroll_ab_4 |> 
+  dplyr::select(year, dplyr::contains("tot_")) |> 
+  tidyr::pivot_longer(!year, names_to = "group", values_to = "total") |> 
+  dplyr::mutate(group = stringr::str_remove(group, "tot_"),
+                group = dplyr::case_match(group, 
+                                          "lt_18" ~ "Under 18",
+                                          "18_24" ~ "18-24",
+                                          "25_34" ~ "25-34",
+                                          "35_44" ~ "35-44",
+                                          "45_54" ~ "45-54",
+                                          "55_64" ~ "55-64",
+                                          "65_74" ~ "65-74",
+                                          "75_84" ~ "75-84",
+                                          "85_94" ~ "85-94",
+                                          "95_gt" ~ "95 and Older"))
 
-<br>
+age_pct <- mdcr_enroll_ab_4 |> 
+  dplyr::select(year, dplyr::contains("pct")) |> 
+  tidyr::pivot_longer(!year, names_to = "group", values_to = "percentage") |> 
+  dplyr::mutate(group = stringr::str_remove(group, "pct_"),
+                group = dplyr::case_match(group, 
+                                          "lt_18" ~ "Under 18",
+                                          "18_24" ~ "18-24",
+                                          "25_34" ~ "25-34",
+                                          "35_44" ~ "35-44",
+                                          "45_54" ~ "45-54",
+                                          "55_64" ~ "55-64",
+                                          "65_74" ~ "65-74",
+                                          "75_84" ~ "75-84",
+                                          "85_94" ~ "85-94",
+                                          "95_gt" ~ "95 and Older"))
 
-```{r mdcr_enroll_ab_4_2}
-mdcr_enroll_ab_4 |> 
-  dplyr::select(year, 
-                dplyr::contains("pct")) |> 
-  tidyr::pivot_longer(!year, 
-                      names_to = "group", 
-                      values_to = "percentage")
+age_groups <- dplyr::left_join(age_tot, 
+                               age_pct, 
+                               by = dplyr::join_by(year, group))
+
+age_groups |> 
+  tidyr::pivot_longer(cols = total:percentage, 
+                      names_to = "type", 
+                      values_to = "value") |> 
+  tidyr::pivot_wider(names_from = "year",
+                     values_from = "value") |>
+  dplyr::filter(type == "total") |> 
+  dplyr::mutate(type = NULL) |> 
+  gt::gt(rowname_col = "group") |> 
+  gt::fmt_number(suffixing = TRUE,
+                  decimals = 0) |> 
+  gt::data_color(direction = "column",
+                 method = "numeric",
+                 palette = "magma",
+                 reverse = F) |> 
+  #gt::opt_stylize(style = 1) |> 
+  gt::tab_options(
+    table_body.hlines.style = "none",
+    column_labels.border.top.color = "black",
+    column_labels.border.bottom.color = "black",
+    table_body.border.bottom.color = "black"
+  )
 ```
 
 <br>
@@ -534,34 +524,36 @@ mdcr_enroll_ab_5
 
 <br>
 
-Part A and/or Part B Enrollees by Type of Entitlement and Demographics, 2013-2021
+## Part A and/or Part B Enrollees
 
-::: {.callout-note appearance="simple"}
+::: {.callout-note appearance="simple" collapse="true"}
 
-## Aged
+## Aged Enrollees
 
 One of the categories used for classifying Medicare enrollees and Medicaid eligibles. Under Medicare, persons age 65 or over are included in this category if they are: entitled to monthly SSA benefits or payments from the RRB, uninsured for SSA or RRB benefits but transitionally insured for Medicare, or not included in the previously mentioned groups, but based on meeting certain criteria, elect to purchase HI and/or SMI coverage by paying the appropriate monthly premium. Persons age 65 or over identified as having ESRD are included. Under Medicaid, persons age 65 or over are included if, in addition to initially being age 65 or over met certain means (income and resources) criteria or incur medical expenses for health care that when deducted from income qualifies the individual for Medicaid.
 
 :::
 
 
-::: {.callout-note appearance="simple"}
+::: {.callout-note appearance="simple" collapse="true"}
 
-## Disabled
+## Disabled Enrollees
 
 One of the categories used for classifying Medicare enrollees and Medicaid eligibles. Disabled persons under age 65 receiving Social Security or RRB disability insurance benefits for 24 months are eligible for Medicare coverage. Persons under age 65 who are diagnosed with ESRD are eligible to receive Medicare coverage without the Social Security disability insurance 24 month requirement. In this online report, ESRD beneficiaries are included with the disabled unless otherwise noted. Under Medicaid, the disabled category refers to low-income individuals of any age who are eligible as persons meeting SSA’s programmatic definition of disability. This includes individuals receiving SSI as well as those whose incomes are too high for SSI, but qualify under separate Medicaid income standards.
 
 :::
 
-::: {.callout-note appearance="simple"}
+::: {.callout-note appearance="simple" collapse="true"}
 
-## End Stage Renal Disease (ESRD)
+## End Stage Renal Disease (ESRD) Enrollees
 
 Permanent kidney failure. To survive, the patient must either receive a kidney transplant or periodic kidney dialysis. Individuals with ESRD are eligible for Medicare benefits under a special entitlement.
 
 Individuals who have chronic kidney disease requiring renal dialysis or a kidney transplant are considered to have ESRD. To qualify for Medicare coverage, such individuals must be fully or currently insured under Social Security or the Railroad Retirement System or be the dependent of an insured person. Eligibility for Medicare coverage begins the first day of the fourth month of dialysis treatments; coverage may begin sooner if the patient participates in a self-care dialysis training program provided by a Medicare-approved training facility. Also, coverage may begin on admittance to a Medicare-approved hospital to receive a kidney transplant or to receive dialysis before the transplant if the transplant takes place in that same month or within the following 2 months.
 
 :::
+
+Part A and/or Part B Enrollees by Type of Entitlement and Demographics, 2013-2021
 
 ```{r mdcr_enroll_ab_6}
 mdcr_enroll_ab_6
@@ -587,6 +579,8 @@ mdcr_enroll_ab_8
 
 <br>
 
+### Enrollment Averages
+
 ```{r mdcr_enroll_avgs}
 mdcr_enroll_avgs
 ```
@@ -597,31 +591,19 @@ mdcr_enroll_avgs
 
 Information on all Medicare beneficiary deaths, by type of entitlement, health care delivery, demographic characteristics, and geography.
 
-Total Beneficiaries by Month of Death, 2008-2021
+### Deaths by Month
+
+Total Beneficiary Deaths by Month, 2008-2021
 
 ```{r mdcr_enroll_ab_33}
 mdcr_enroll_ab_33
 ```
 
-<br>
 
-Total Beneficiaries by Demographics, 2013-2021
-
-```{r mdcr_enroll_ab_34}
-mdcr_enroll_ab_34
-```
 
 <br>
 
-Total Beneficiaries by Area of Residence, 2013-2021
-
-```{r mdcr_enroll_ab_35}
-mdcr_enroll_ab_35
-```
-
-<br>
-
-Original Medicare Beneficiaries by Month of Death, 2008-2021
+Original Medicare Beneficiary Deaths by Month, 2008-2021
 
 ```{r mdcr_enroll_ab_36}
 mdcr_enroll_ab_36
@@ -629,16 +611,8 @@ mdcr_enroll_ab_36
 
 <br>
 
-Original Medicare Beneficiaries by Area of Residence, 2013-2021
 
-```{r mdcr_enroll_ab_37}
-mdcr_enroll_ab_37
-```
-
-<br>
-
-Medicare Advantage and Other Health Plan Beneficiaries by Month of
-Death, 2008-2021
+Medicare Advantage and Other Health Plan Beneficiary Deaths by Month, 2008-2021
 
 ```{r mdcr_enroll_ab_38}
 mdcr_enroll_ab_38
@@ -646,9 +620,38 @@ mdcr_enroll_ab_38
 
 <br>
 
-Medicare Advantage and Other Health Plan Beneficiaries by Area of
+### Deaths by Residence
+
+Total Beneficiary Deaths by Area of Residence, 2013-2021
+
+```{r mdcr_enroll_ab_35}
+mdcr_enroll_ab_35
+```
+
+<br>
+
+Original Medicare Beneficiary Deaths by Area of Residence, 2013-2021
+
+```{r mdcr_enroll_ab_37}
+mdcr_enroll_ab_37
+```
+
+<br>
+
+Medicare Advantage and Other Health Plan Beneficiary Deaths by Area of
 Residence, 2013-2021
 
 ```{r mdcr_enroll_ab_39}
 mdcr_enroll_ab_39
+```
+
+
+<br>
+
+### Death Demographics
+
+Total Beneficiary Deaths Demographics, 2013-2021
+
+```{r mdcr_enroll_ab_34}
+mdcr_enroll_ab_34
 ```
